k8s/horoscope-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horoscope-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: horoscope-api
  template:
    metadata:
      labels:
        app: horoscope-api
    spec:
      containers:
        - name: horoscope-api
          image: sachinj6277/horoscope-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
