k8s/horoscope-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: horoscope-api-service
spec:
  selector:
    app: horoscope-api
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
