k8s/horoscope-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api-ingress
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /horoscope
            pathType: Prefix
            backend:
              service:
                name: horoscope-api-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-api-service
                port:
                  number: 80
